--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "tymly-runner",
   "description": "A tool for running tymlys",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "Reece Brend",
   "main": "./lib/index.js",
   "dependencies": {
     "boom": "^5.2.0",
     "config": "^1.26.1",
     "debug": "^2.6.8",
-    "tymly": "0.0.14",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
-    "safe-buffer": "^5.1.1"
+    "safe-buffer": "^5.1.1",
+    "tymly": "^0.0.15"
   },
   "devDependencies": {
     "chai": "^4.1.0",
