--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "node ./lib/index.js",
     "lint": "standard",
-    "test": "standard && \"./node_modules/.bin/_mocha\" -R spec"
+    "test": "standard && mocha"
   },
   "license": "MIT",
   "repository": {
