--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Reece Brend",
   "main": "./lib/index.js",
   "dependencies": {
-    "boom": "^5.2.0",
-    "config": "^1.26.1",
-    "debug": "^2.6.8",
-    "lodash": "^4.17.4",
-    "safe-buffer": "^5.1.1",
-    "tymly": "^0.0.15"
+    "boom": "5.2.0",
+    "config": "1.26.1",
+    "debug": "3.1.0",
+    "lodash": "4.17.4",
+    "safe-buffer": "5.1.1",
+    "tymly": "0.0.15"
   },
   "devDependencies": {
-    "chai": "^4.1.0",
+    "chai": "4.1.0",
     "mocha": "4.0.1",
-    "standard": "^10.0.3"
+    "standard": "10.0.3"
   },
   "scripts": {
     "start": "node ./lib/index.js",
