--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "chai": "4.1.0",
     "mocha": "4.0.1",
-    "standard": "10.0.3"
+    "standard": "10.0.3",
+    "nodemon": "1.14.12"
   },
   "scripts": {
     "start": "node ./lib/index.js",
