nodemon looking at relative paths

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "node ./lib/index.js",
     "lint": "standard",
     "test": "standard && mocha",
-    "start-nodemon": "nodemon --watch C:/development/tymly/blueprints --watch C:/development/private-blueprints -e json ./lib/index.js --legacy-watch"
+    "start-nodemon": "nodemon --watch ./../../blueprints --watch ./../../../private-blueprints/blueprints -e json ./lib/index.js --legacy-watch"
   },
   "license": "MIT",
   "repository": {
