--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tymly-runner",
   "description": "A tool for running tymlys",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "Reece Brend",
   "main": "./lib/index.js",
   "dependencies": {
@@ -10,13 +10,13 @@
     "debug": "3.1.0",
     "lodash": "4.17.5",
     "safe-buffer": "5.1.1",
-    "tymly": "0.0.15"
+    "tymly": "^0.0.16"
   },
   "devDependencies": {
     "chai": "4.1.2",
     "mocha": "5.0.4",
-    "standard": "11.0.1",
-    "nodemon": "1.17.1"
+    "nodemon": "1.17.1",
+    "standard": "11.0.1"
   },
   "scripts": {
     "start": "node ./lib/index.js",
