--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "tymly-runner",
+  "name": "@wmfs/tymly-runner",
+  "version": "0.0.0-semantically-released",
   "description": "A tool for running tymlys",
-  "version": "0.0.8",
-  "author": "Reece Brend",
+  "author": "West Midlands Fire Service",
+  "homepage": "https://github.com/wmfs/tymly-runner#readme",
+  "keywords": [
+    "tymly",
+    "low code",
+    "nodejs",
+    "javascript"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wmfs/tymly-runner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wmfs/tymly-runner/issues"
+  },
   "main": "./lib/index.js",
   "dependencies": {
     "boom": "7.2.0",
@@ -10,26 +25,32 @@
     "debug": "3.1.0",
     "lodash": "4.17.10",
     "safe-buffer": "5.1.2",
-    "tymly": "^0.0.17"
+    "tymly": "0.0.17"
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "codecov": "3.0.2",
+    "cz-conventional-changelog": "2.1.0",
     "mocha": "5.2.0",
-    "nodemon": "1.17.5",
+    "nodemon": "1.17.3",
+    "nyc": "12.0.2",
+    "semantic-release": "^15.5.2",
     "standard": "11.0.1"
   },
   "scripts": {
     "start": "node ./lib/index.js",
     "lint": "standard",
-    "test": "standard && mocha",
+    "test": "nyc mocha && standard",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "start-nodemon": "nodemon --watch ./../../blueprints --watch ./../../../private-blueprints/blueprints -e json ./lib/index.js --legacy-watch"
   },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wmfs/tymly"
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
-  "bugs": {
-    "url": "https://github.com/wmfs/tymly/issues"
+  "publishConfig": {
+    "access": "public"
   }
 }
