refactor: add keyword to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/wmfs/tymly-runner#readme",
   "keywords": [
     "tymly",
+    "package",
     "low code",
     "nodejs",
     "javascript"
