--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lint": "standard",
     "test": "nyc mocha && standard",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "semantic-release",
     "start-nodemon": "nodemon --watch ./../../blueprints --watch ./../../../private-blueprints/blueprints -e json ./lib/index.js --legacy-watch"
   },
   "config": {
